--- a/Lab1/password.css
+++ b/Lab1/password.css
@@ -5,6 +5,12 @@
     padding: 10px 34px;
     border: 2px solid black;
     width: 5%;
+    transition-duration: 0.4s;
+}
+
+#back:hover{
+    background-color: grey;
+    color: white;
 }
 
 #pass{
@@ -16,6 +22,12 @@
     width: 20%;
     margin: auto;
     display: block;
+    transition-duration: 0.4s;
+}
+
+#pass:hover{
+    background-color: grey;
+    color: white;
 }
 
 #box{
