--- a/Lab1/login.css
+++ b/Lab1/login.css
@@ -5,6 +5,12 @@
     padding: 10px 34px;
     border: 2px solid black;
     width: 5%;
+    transition-duration: 0.4s;
+}
+
+#back:hover{
+    background-color: grey;
+    color: white;
 }
 
 #login{
@@ -16,6 +22,12 @@
     padding: 12px 36px;
     border: 2px solid black;
     width: 10%;
+    transition-duration: 0.4s;
+}
+
+#login:hover{
+    background-color: grey;
+    color: white;
 }
 
 #pass{
@@ -24,13 +36,13 @@
 }
 
 #log{
-    text-align: center;
+    margin-left: 24%;
 }
 
 #box{
     width: 50%;
     height: 150px;
-    padding: 5px;
+    padding: 10px;
     border: 5px solid black;
     margin: auto;
     background-color: whitesmoke;
