--- a/Lab1/login.css
+++ b/Lab1/login.css
@@ -14,12 +14,11 @@
 }
 
 #login{
-    margin: auto;
-    display: block;
+    margin-left: 40%;
     text-align: center;
     background-color: white;
     font-size: 16px;
-    padding: 12px 36px;
+    padding: 10px 30px;
     border: 2px solid black;
     width: 10%;
     transition-duration: 0.4s;
@@ -31,7 +30,7 @@
 }
 
 #pass{
-    text-align: center;
+    margin-left: 60%;
     font-size: 14px;
 }
 
@@ -41,8 +40,8 @@
 
 #box{
     width: 50%;
-    height: 150px;
-    padding: 10px;
+    height: 180px;
+    padding: 20px;
     border: 5px solid black;
     margin: auto;
     background-color: whitesmoke;
