--- a/Lab1/registo.css
+++ b/Lab1/registo.css
@@ -36,7 +36,7 @@
 
 #box{
     width: 50%;
-    height: 220px;
+    height: 300px;
     padding: 20px;
     border: 5px solid black;
     margin: auto;
@@ -48,6 +48,6 @@
     font-size: 12px;
 }
 
-#checkbox{
-    margin-left: 20%;
+#label{
+    width: 100%;
 }
